# hoy-pasa-algo

./: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.idx/: dev.nix
backend/: API_CONSUMPTION_GUIDE.md  API_EVENTOS_README.md  README.md  TESTS_README.md  app.py  config.py  factory.py  main.py  noxfile.py  pyproject.toml
backend/.github/instructions/: Siempre tipar las cosas.instructions.md
backend/db/: ORMcsv.py  database.py
backend/db/data/: categories.csv  eventos.csv  favorites.csv  usuarios.csv
backend/libs/: helpers.py  utils.py
backend/models/: evento.py  eventos.py  usuario.py
backend/routes/: auth.py  events.py  upload.py  users.py
backend/tests/: test_api.py  test_auth_flow.py  test_decorators.py  test_events_flow.py  test_helpers.py  test_models.py  test_multi_user_interaction.py  test_orm.py  test_stress_flow.py  test_users_flow.py
src/components/: Button.tsx  Carousel.astro  CreateEventForm.tsx  EventCard.tsx  ExplorePage.tsx  Footer.tsx  Header.tsx  Input.tsx  LandingPage.astro  LoginForm.tsx  RegisterForm.tsx  Welcome.astro
src/config/: api.ts
src/constants/: explorePage.ts  forms.ts  landingPage.ts  profilePage.ts
src/i18n/: config.i18n.ts  i18n.ts
src/layouts/: Layout.astro
src/lib/: api.ts  dom.ts
src/pages/: 404.astro  create-event.astro  explore.astro  index.astro  login.astro  profile.astro  register.astro  sign-in.astro  sign-up.astro  sing-in.astro
src/services/: dbHelper.ts  eventRepository.ts  eventService.ts  userRepository.ts  userService.ts
(+61 files in other folders)
