[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "nox>=2025.5.1",
    "pydantic[email]>=2.11.7",
    "regex>=2024.11.6",
    "requests>=2.32.4",
    "ruff>=0.12.3",
]

[tool.ruff]
# Set the maximum line length to 100.
line-length = 100

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]
# Ignore unused imports (F401) to prevent automatic removal
ignore = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
#virtualenvs.in-project = true
